5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1758_674.log
== TEST (2019-05-23 10:18:07) 
-- CODE:
from numpy import*
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
v1=array(eval(input()))
print(size(v1))
print(v1([0]))
print(v1([-1]))
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1)),2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:19:17) 
-- CODE:
from numpy import*
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
v1= array(eval(input()))
print(size(v1))
print(v1([0]))
print(v1([-1]))
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1)),2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:21:37) 
-- CODE:
from numpy import*
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
v1= array(eval(input("v:")))
print(size(v1))
print(v1[0])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1)),2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:21:52) 
-- CODE:
from numpy import*
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
v1= array(eval(input("v:")))
print(size(v1))
print(v1[0])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1)),2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:22:39) 
-- CODE:
from numpy import*
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
v1= array(eval(input("v:")))
print(size(v1))
print(v1[0])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1)))

-- EXECUTION TIME:
0.385292
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
11.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:23:16) 
-- CODE:
from numpy import*
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
v1= array(eval(input("v:")))
print(size(v1))
print(v1[0])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1)),2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:23:43) 
-- CODE:
from numpy import*
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
v1= array(eval(input("v:")))
print(size(v1))
print(v1[0])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2)

-- ERROR:
File "XXXX", line 11
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:24:21) 
-- CODE:
from numpy import*
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
v1= array(eval(input("v:")))
print(size(v1))
print(v1[0])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1))2)

-- ERROR:
File "XXXX", line 10
    print(round(sum(v1)/size(v1))2)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:24:28) 
-- CODE:
from numpy import*
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
v1= array(eval(input("v:")))
print(size(v1))
print(v1[0])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1)),2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:24:48) 
-- CODE:
from numpy import*
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
v1= array(eval(input("v:")))
print(size(v1))
print(v1[0])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:24:52) 
-- CODE:
from numpy import*
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
v1= array(eval(input("v:")))
print(size(v1))
print(v1[0])
print(v1[-1])
print(max(v1))
print(min(v1))
print(sum(v1))
print(round(sum(v1)/size(v1),2))

-- EXECUTION TIME:
0.42624
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
